--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,13 +1,26 @@
-.navbar, .logo-and-navbar, header, .button-search, .contact-us {
+.box, .navbar, .up-content__arrows, .up-content, .boxes, header, .circle-play, .blackout, .up-content__arrows__arrow, .box__category, .search__button, .search__input, .contact-us {
   display: flex;
 }
 
-.button-search, .contact-us {
+.circle-play, .blackout, .up-content__arrows__arrow, .box__category, .search__button, .search__input, .contact-us {
   justify-content: center;
   align-items: center;
 }
 
-.navbar, .logo-and-navbar, header {
+.up-content__arrows, .up-content, .boxes, header {
+  justify-content: space-between;
+}
+
+.box, .navbar, .circle-play, .blackout, .up-content__arrows__arrow, .box__category, .search__button, .search__input, .contact-us, .up-content__arrows, .up-content, .boxes, header {
+  display: flex;
+}
+
+.circle-play, .blackout, .up-content__arrows__arrow, .box__category, .search__button, .search__input, .contact-us {
+  justify-content: center;
+  align-items: center;
+}
+
+.up-content__arrows, .up-content, .boxes, header {
   justify-content: space-between;
 }
 
@@ -16,37 +29,17 @@ header {
   color: #999999;
   font-size: calc( 0.003125 * 100vw + 13px );
   margin-top: 60px;
+  flex-wrap: wrap;
+  flex-direction: column;
 }
-@media screen and (min-width: 320px) {
-  header {
-    flex-wrap: wrap;
-    flex-direction: column;
-  }
-}
-@media screen and (min-width: 760px) {
+@media screen and (min-width: 768px) {
   header {
     flex-wrap: nowrap;
     flex-direction: row;
   }
 }
-@media screen and (min-width: 1170px) {
+@media screen and (min-width: 1220px) {
   header {
-    flex-wrap: nowrap;
-    flex-direction: row;
-  }
-}
-
-.logo-and-navbar {
-  width: 70%;
-}
-@media screen and (min-width: 320px) {
-  .logo-and-navbar {
-    flex-wrap: wrap;
-    flex-direction: column;
-  }
-}
-@media screen and (min-width: 1170px) {
-  .logo-and-navbar {
     flex-wrap: nowrap;
     flex-direction: row;
   }
@@ -61,25 +54,38 @@ header {
   text-transform: uppercase;
 }
 
-@media screen and (min-width: 320px) {
-  .navbar {
-    flex-direction: column;
-    margin: 15px 0;
-  }
+.navbar {
+  flex-direction: column;
+  margin: 20px 0px;
+  width: 100%;
 }
-@media screen and (min-width: 1170px) {
+@media screen and (min-width: 375px) {
   .navbar {
+    justify-content: space-between;
     flex-wrap: nowrap;
     flex-direction: row;
   }
 }
-
+@media screen and (min-width: 600px) {
+  .navbar {
+    align-items: center;
+    width: 400px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .navbar {
+    justify-content: space-around;
+  }
+}
+@media screen and (min-width: 1220px) {
+  .navbar {
+    justify-content: space-around;
+  }
+}
 .navbar__item {
   cursor: pointer;
-  margin-right: 20px;
   transition: 0.3s;
 }
-
 .navbar__item::after {
   height: 3px;
   width: 20px;
@@ -89,10 +95,8 @@ header {
   transition: 0.5s;
   background-color: #433A8B;
 }
-
 .navbar__item:hover::after {
   transition: 0.5s;
-  content: "";
   width: 100%;
 }
 
@@ -103,58 +107,65 @@ header {
   background-color: #FFFFFF;
   transition: 0.3s;
 }
-
 .contact-us:hover {
   transition: 0.3s;
   opacity: 0.7;
 }
 
 .main-info {
-  margin-top: 360px;
+  margin-top: 100px;
 }
-@media screen and (min-width: 320px) {
+.main-info__title {
+  font-weight: 900;
+  color: #000000;
+  font-size: calc( 0.015625 * 100vw + 20px );
+}
+.main-info__subtitle {
+  font-weight: bold;
+  color: #999999;
+  font-size: calc( 0.008125 * 100vw + 12.4px );
+}
+@media screen and (min-width: 1220px) {
   .main-info {
-    margin-top: 100px;
+    margin-top: 360px;
   }
 }
 
-.main__title {
-  color: #000000;
-}
-
-.input-and-button {
+.search {
   margin-top: 150px;
   width: 100%;
+  max-width: 650px;
   margin-bottom: 200px;
 }
-
-.find_input {
-  font-weight: 600;
-  color: #999999;
-  font-size: calc( 0.003125 * 100vw + 13px );
-  padding-left: 10px;
-  height: 30px;
-  font-family: "Montserrat", sans-serif;
-  font-weight: 500;
-  width: 100%;
-  border: none;
-  outline: 0;
-  margin-bottom: 15px;
+@media screen and (min-width: 600px) {
+  .search {
+    display: flex;
+  }
 }
-
-.button-search {
-  margin: 0 auto;
+.search__input {
+  font-weight: 500;
+  color: #000000;
+  font-size: calc( 0.003125 * 100vw + 13px );
+  width: 100%;
+  height: 70px;
+  background-color: #FFFFFF;
+  transition: 0.3s;
+  padding-left: 20px;
+  margin-bottom: 20px;
+}
+.search__button {
   font-weight: 600;
   color: #FFFFFF;
-  font-size: calc( 0.003125 * 100vw + 13px );
-  width: 200px;
   height: 70px;
-  background-color: #433A8B;
+  width: 200px;
   cursor: pointer;
   transition: 0.3s;
+  font-size: calc( 0.003125 * 100vw + 13px );
+  margin: 0 auto;
+  background-color: #433A8B;
+  color: #FFFFFF;
 }
-
-.button-search:hover {
+.search__button:hover {
   transition: 0.3s;
   background-color: #FE6091;
 }
@@ -171,30 +182,349 @@ html {
   outline: 0;
 }
 
-.container {
-  margin: 0 auto;
+input {
+  border: none;
+  outline: 0;
+  padding: 0;
+  margin: 0;
 }
-@media screen and (min-width: 320px) {
+
+.container {
+  transition: 0.3s;
+  margin: 0 auto;
+  max-width: 300px;
+  min-width: 300px;
+}
+@media screen and (min-width: 375px) {
   .container {
-    max-width: 80vw;
+    max-width: 360px;
   }
 }
-@media screen and (min-width: 1170px) {
+@media screen and (min-width: 600px) {
   .container {
-    max-width: 65vw;
+    max-width: 560px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 700px;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .container {
+    max-width: 960px;
+  }
+}
+@media screen and (min-width: 1220px) {
+  .container {
+    max-width: 1170px;
   }
 }
 
 .title {
   font-weight: 900;
-  color: #000000;
+  color: #433A8B;
   font-size: calc( 0.015625 * 100vw + 20px );
+  margin: 30px 0;
 }
 
 .subtitle {
-  font-weight: bold;
+  font-weight: 500;
   color: #999999;
-  font-size: calc( 0.005 * 100vw + 18.4px );
+  font-size: calc( 0 * 100vw + 14px );
+  margin-bottom: 30px;
+  max-width: 600px;
+}
+
+.main-img {
+  position: absolute;
+  background-size: contain;
+  background-repeat: no-repeat;
+  height: 1080px;
+  width: 44vw;
+  right: 0;
+  top: 0;
+  z-index: -6;
+}
+@media screen and (min-width: 1220px) {
+  .main-img {
+    background-image: url("https://i.ibb.co/zby7Kps/main.jpg");
+  }
+}
+
+.experience {
+  width: 100%;
+  background-position: 0 0;
+  background-repeat: no-repeat;
+  background-size: contain;
+  padding-bottom: 50px;
+}
+@media screen and (min-width: 1220px) {
+  .experience {
+    background-image: url(../../img/experience-travel-back.jpg);
+  }
+}
+
+.boxes {
+  flex-wrap: wrap;
+  width: 100%;
+}
+@media screen and (min-width: 375px) {
+  .boxes {
+    flex-wrap: wrap;
+    flex-direction: row;
+  }
+}
+@media screen and (min-width: ) {
+  .boxes {
+    flex-wrap: wrap;
+    flex-direction: row;
+  }
+}
+@media screen and (min-width: 1220px) {
+  .boxes {
+    justify-content: space-between;
+  }
+}
+
+.experience__column {
+  margin-bottom: 40px;
+  width: 100%;
+}
+@media screen and (min-width: 375px) {
+  .experience__column {
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+  }
+}
+@media screen and (min-width: 600px) {
+  .experience__column {
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 250px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .experience__column {
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 150px;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .experience__column {
+    width: 180px;
+  }
+}
+@media screen and (min-width: 1220px) {
+  .experience__column {
+    width: 270px;
+  }
+}
+
+.box {
+  justify-content: flex-end;
+  height: 400px;
+  width: 100%;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+@media screen and (min-width: 768px) {
+  .box {
+    flex-direction: row;
+    flex-wrap: wrap;
+    height: 250px;
+  }
+}
+@media screen and (min-width: 1220px) {
+  .box {
+    height: 400px;
+  }
+}
+.box__category {
+  font-size: calc( 0.0025 * 100vw + 14.2px );
+  font-weight: 500;
+  color: #FFFFFF;
+  height: 30px;
+  width: 120px;
+  opacity: 0.9;
+  background-color: #433A8B;
+}
+
+.img-experience-1 {
+  background-image: url("https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/56558719_409228822990474_3644209115700957157_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=NNhp8Y6ChS8AX-J9iGa&oh=053b1f2b9cbe39abc501de4ec9352724&oe=5EB7695F");
+}
+
+.img-experience-2 {
+  background-image: url("https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/p1080x1080/80644304_637018030384337_6567613158327309370_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=_Si_ny3g-t0AX8jS8M8&oh=e0274f0f6559c47cc1a5a23c25abf19a&oe=5EC3FAB3");
+}
+
+.img-experience-3 {
+  background-image: url("https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/p1080x1080/81897907_982353628817748_7775538246734106595_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=100&_nc_ohc=wo7X49C_avEAX-NpeqU&oh=2bbe7d223a994b52fffc4eb44ad0b06c&oe=5EC7E37C");
+}
+
+.img-experience-4 {
+  background-image: url("https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/p1080x1080/71922423_1180665852323298_4010668248192934104_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=106&_nc_ohc=UO7q2DV3wMUAX-86TuW&oh=3e4bf87600a408e3b6520df0b2481071&oe=5EB8D43A");
+}
+
+.title-box {
+  margin: 30px 0;
+  font-weight: 700;
+  color: #000000;
+  font-size: calc( 0.0025 * 100vw + 14.2px );
+}
+
+.subtitle-box {
+  width: 100%;
+  font-weight: 500;
+  color: #999999;
+  font-size: calc( 0 * 100vw + 14px );
+}
+
+.circle {
+  z-index: -3;
+  left: 0;
+  top: 0;
+  position: absolute;
+  width: 567px;
+  height: 453px;
+  background-size: auto;
+  background-repeat: no-repeat;
+}
+@media screen and (min-width: 1220px) {
+  .circle {
+    background-image: url(../../img/circle.png);
+  }
+}
+
+.choose-caterory {
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: 0 0px;
+}
+@media screen and (min-width: 1220px) {
+  .choose-caterory {
+    background-image: url(../../img/choose-category.jpg);
+  }
+}
+
+.img-category1 {
+  background-image: url("https://scontent-amt2-1.cdninstagram.com/v/t51.2885-15/e35/p1080x1080/73177683_886357455273492_3040981951662070318_n.jpg?_nc_ht=scontent-amt2-1.cdninstagram.com&_nc_cat=100&_nc_ohc=L7t8gpVG3kAAX8DVieD&oh=adef4016ee8852583316c356ca41610f&oe=5ECB87FC");
+}
+
+.img-category2 {
+  background-image: url("https://i.pinimg.com/originals/bc/f2/24/bcf2247e1d2484a755820f6cfbf2a3f6.jpg");
+}
+
+.img-category3 {
+  background-image: url("https://www.paledivision.com/wp-content/uploads/2018/05/willabelle-ong-willamazing-blogger-fashion-travel-lifestyle-blog-top-singapore-instagram-spots-iceland-reykjavik-icelandic-mountain-photography-locations-gullfoss-waterfall-winter.jpg");
+}
+
+.img-category4 {
+  background-image: url("https://scontent-amt2-1.cdninstagram.com/v/t51.2885-15/e35/p1080x1080/80452230_2983987128280893_1866896929975156859_n.jpg?_nc_ht=scontent-amt2-1.cdninstagram.com&_nc_cat=109&_nc_ohc=XLwWxHcsSpgAX9pAEOm&oh=0178393dd8ecff8f141d10e66cdd7395&oe=5EC7406E");
+}
+
+.up-content {
+  width: 100%;
+  flex-direction: column;
+}
+@media screen and (min-width: 768px) {
+  .up-content {
+    flex-direction: row;
+  }
+}
+.up-content__arrows {
+  width: 100px;
+  margin-bottom: 30px;
+}
+.up-content__arrows__arrow {
+  display: flex;
+  width: 270px;
+}
+.up-content__arrows__arrow {
+  cursor: pointer;
+  transition: 0.3s;
+  height: 40px;
+  width: 40px;
+  border: 3px solid #999999;
+  color: #999999;
+  font-size: 19px;
+}
+.up-content__arrows__arrow:hover {
+  border: 3px solid #433A8B;
+  background-color: #433A8B;
+  color: #FFFFFF;
+}
+
+.arrow:hover {
+  transition: 0.3s;
+  background-color: #433A8B;
+  border: 3px solid #433A8B;
+  color: white;
+}
+
+.adventure-trip {
+  padding-bottom: 100px;
+  width: 100%;
+  background-size: contain;
+  position: relative;
+  background-repeat: no-repeat;
+}
+@media screen and (min-width: 1220px) {
+  .adventure-trip {
+    background-image: url(../../img/video-back.jpg);
+  }
+}
+
+.video-cover {
+  margin-bottom: 130px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 700px;
+  background-image: url("http://www.travelstart.co.ke/blog/wp-content/uploads/2017/12/48.jpg");
+  background-size: cover;
+}
+
+.blackout {
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+  transition: 1s;
+}
+
+.blackout:hover {
+  background-color: rgba(0, 0, 0, 0.1);
+  transition: 1s;
+}
+
+.circle-play {
+  height: 130px;
+  width: 130px;
+  border-radius: 50%;
+  background: rgba(255, 255, 255, 0.6);
+}
+
+.circle-play-two {
+  cursor: pointer;
+  transition: 0.3s;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 25px;
+  background-color: white;
+  height: 90px;
+  width: 90px;
+  border-radius: 50%;
+}
+
+.circle-play-two:hover {
+  transition: 0.3s;
+  height: 100px;
+  width: 100px;
 }
 
 /*# sourceMappingURL=styles.css.map */
